Fix alignment of header bar

--- a/django_dartboard/static/css/dartboard.css
+++ b/django_dartboard/static/css/dartboard.css
@@ -1,11 +1,10 @@
 .status-bar {
     background-color: lightgray;
     height: 4rem;
-    padding: 0;
+    padding: .4rem;
 }
 
 .img-avatar {
-    margin-top: 7px;
     border: 1px solid #333;
     border-radius: 50%;
     background-color: white;
@@ -17,7 +16,7 @@
 
 .logo {
     margin-top: -8px;
-    width: 80px;
+    width: 60px;
 }
 
 .logo-large {
